display reviews on selected state

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,7 +4,7 @@
 </head>
 <div class="container d-flex">
     <div class="col-5">
-        <h1>Map</h1>
+        <h1 id="stateTitle">Select a State</h1>
         <div id="mapContainer" style="height: 400px;"></div>
         <form id="searchForm">
             <input type="text" id="searchInput" placeholder="Search.." name="search">
