--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,11 +1,11 @@
 <div class="container d-flex">
     <div class="col-5">
-        <h1>tomtom map </h1>
-        <img class="img-thumbnail"
-            src="https://i0.wp.com/theperfectroundgolf.com/wp-content/uploads/2022/04/placeholder.png?fit=1200%2C800&ssl=1"
-            alt="placeholder">
-        <input type="text" placeholder="Search.." name="search">
-        <button type="button" class="btn btn-success btn-sm">search</button>
+        <h1>Map</h1>
+    <div id="mapContainer"></div>
+    <form id="searchForm">
+      <input type="text" id="searchInput" placeholder="Search.." name="search">
+      <button type="submit" class="btn btn-success btn-sm">Search</button>
+    </form>
     </div>
     <div class="dashboardDiv col-7">
         {{#each reviews as |review|}}
@@ -29,3 +29,6 @@
 
     </div>
 </div>
+
+<script src="https://api.tomtom.com/maps-sdk-for-web/cdn/6.x/6.14.0/maps/maps-web.min.js"></script>
+<script src="/js/dashboard.js"></script>
