--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,25 +12,25 @@
         </form>
     </div>
     <div class="dashboardDiv col-7">
-        {{#each reviews as |review|}}
-        <div class="reviewCard card p-3 ">
-            <div
-                class="card-header p-3 d-flex justify-content-between align-items-center p-3 mb-2 bg-success-subtle text-emphasis-success">
-                <h4>{{review.review_topic}}</h4>
-                <div>
-                    <p>posted by {{review.user.username}}</p>
+        <div class="reviews-container">
+            {{#each reviews as |review|}}
+            <div class="reviewCard card p-3 ">
+                <div class="card-header p-3 d-flex justify-content-between align-items-center p-3 mb-2 bg-success-subtle text-emphasis-success">
+                    <h4>{{review.review_topic}}</h4>
+                    <div>
+                        <p>posted by {{review.user.username}}</p>
+                    </div>
+                </div>
+                <div class="card-body border border-2 rounded-bottom">
+                    <p class="text-body-secondary">{{review.review_details}}</p>
+                    <p>on {{format_date review.createdAt}}</p>
+                </div>
+                <div class="card-footer">
+                    <a href="/addcomment/{{review.id}}" class="btn btn-primary">Add Comment</a>
                 </div>
             </div>
-            <div class="card-body border border-2 rounded-bottom">
-                <p class="text-body-secondary">{{review.review_details}}</p>
-                <p>on {{format_date review.createdAt}}</p>
-            </div>
-            <div class="card-footer">
-                <a href="/addcomment/{{review.id}}" class="btn btn-primary">Add Comment</a>
-            </div>
+            {{/each}}
         </div>
-        {{/each}}
-
     </div>
 </div>
 
