completed main handlebars and styling on pages

--- a/views/addComment.handlebars
+++ b/views/addComment.handlebars
@@ -1,3 +1,4 @@
+<div class="page-content">
 <div class="d-flex justify-content-center">
     <div class="dashboardDiv col-10">
         <div class="reviewCard card p-3" id="{{reviewsPlusComments.id}}">
@@ -18,7 +19,7 @@
                     <label for="floatingTextarea2">Comments</label>
                 </div>
                 <div class="d-flex justify-content-center p-2">
-                    <button type="submit" class="btn btn-success btn-md addCommentBtn">Add Comment</button>
+                    <button type="submit" class="btn btn-primary btn-md addCommentBtn">Add Comment</button>
                 </div>
             </form>
         </div>
@@ -38,6 +39,7 @@
             {{/each}}
         </div>
     </div>
+</div>
 </div>
 
 <script src="/js/addComment.js"></script>
