--- a/views/addReview.handlebars
+++ b/views/addReview.handlebars
@@ -1,3 +1,4 @@
+<div class="page-content">
 <div class="p-5">
     <form class="m-5 border border-3 p-5 bg-body-tertiary addReviewForm" id="{{state.id}}">
         <h5 class="text-success-emphasis mb-3">add review to {{state.name}}</h5>
@@ -25,5 +26,6 @@
         </div>
         <button type="submit" class="btn btn-success btn-md my-3">Submit</button>
     </form>
+</div>
 </div>
 <script src="/js/addReview.js"></script>
