--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,42 +1,52 @@
 .rating {
-    display: inline-block;
-    font-size: 0; /* Prevent the space between radio buttons */
-  }
-  
-  .rating input {
-    display: none; /* Hide the radio buttons */
-  }
-  
-  .rating label {
-    cursor: pointer;
-    width: 30px;
-    height: 30px;
-    background-image: url('https://www.iconpacks.net/icons/2/free-rating-star-icon-2766-thumb.png'); 
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  
-  /* Style for the selected stars */
-  .rating input:checked + label {
-    background-image: url('https://pixlok.com/wp-content/uploads/2021/07/Rating-SVG-Icon-s9fd.png'); 
-  }
-  
-  .dashboardDiv {
-    padding-left: 60px;
-    height: 80vh;
-    overflow-y: auto;
-    padding-right: 20px;
-  }
+  display: inline-block;
+  font-size: 0;
+  /* Prevent the space between radio buttons */
+}
 
-  #stateTitle,
-  #searchForm {
+.rating input {
+  display: none;
+  /* Hide the radio buttons */
+}
+
+.rating label {
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  background-image: url('https://www.iconpacks.net/icons/2/free-rating-star-icon-2766-thumb.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Style for the selected stars */
+.rating input:checked+label {
+  background-image: url('https://pixlok.com/wp-content/uploads/2021/07/Rating-SVG-Icon-s9fd.png');
+}
+
+.dashboardDiv {
+  padding-left: 60px;
+  height: 80vh;
+  overflow-y: auto;
+  padding-right: 20px;
+}
+
+#stateTitle,
+#searchForm {
   text-align: center;
-  }
+}
 
-  #searchForm {
-    padding-top: 15px;
-  }
+#searchForm {
+  padding-top: 15px;
+}
 
-  .reviews-container {
-    margin-bottom: 20px;
-  }
+.reviews-container {
+  margin-bottom: 20px;
+}
+
+.navbar-brand {
+  font-size: 40px;
+}
+
+.page-content {
+  padding-top: 30px;
+}
