--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,20 +2,22 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
 </head>
-<div class="container d-flex">
+<div class="page-content">
+<div class=" container d-flex">
     <div class="col-5">
         <h1 id="stateTitle">Select a State</h1>
         <div id="mapContainer" style="height: 400px;"></div>
         <form id="searchForm">
             <input type="text" id="searchInput" placeholder="Search.." name="search">
-            <button type="submit" class="btn btn-success btn-sm">Search</button>
+            <button type="submit" class="btn btn-primary btn-sm">Search</button>
         </form>
     </div>
     <div class="dashboardDiv col-7">
         <div class="reviews-container">
             {{#each reviews as |review|}}
             <div class="reviewCard card p-3 ">
-                <div class="card-header p-3 d-flex justify-content-between align-items-center p-3 mb-2 bg-success-subtle text-emphasis-success">
+                <div
+                    class="card-header p-3 d-flex justify-content-between align-items-center p-3 mb-2 bg-success-subtle text-emphasis-success">
                     <h4>{{review.review_topic}}</h4>
                     <div>
                         <p>posted by {{review.user.username}}</p>
@@ -32,6 +34,7 @@
             {{/each}}
         </div>
     </div>
+</div>
 </div>
 
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
