--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -1,46 +1,48 @@
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="card bg-light">
-        <div class="card-body">
-          <h2 class="card-title text-center">Login</h2>
-          <form class="form login-form">
-            <div class="form-group">
-              <label for="email-login">Email:</label>
-              <input class="form-control" type="text" id="email-login" />
-            </div>
-            <div class="form-group">
-              <label for="password-login">Password:</label>
-              <input class="form-control" type="password" id="password-login" />
-            </div>
-            <div class="form-group text-center">
-              <button class="btn btn-primary" type="submit">Login</button>
-            </div>
-          </form>
+<div class="page-content">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card bg-light">
+          <div class="card-body">
+            <h2 class="card-title text-center">Login</h2>
+            <form class="form login-form">
+              <div class="form-group">
+                <label for="email-login">Email:</label>
+                <input class="form-control" type="text" id="email-login" />
+              </div>
+              <div class="form-group">
+                <label for="password-login">Password:</label>
+                <input class="form-control" type="password" id="password-login" />
+              </div>
+              <div class="form-group text-center">
+                <button class="btn btn-primary" type="submit">Login</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-md-6">
-      <div class="card bg-light">
-        <div class="card-body">
-          <h2 class="card-title text-center">Register</h2>
-          <form class="form signup-form">
-            <div class="form-group">
-              <label for="name-signup">Name:</label>
-              <input class="form-control" type="text" id="name-signup" />
-            </div>
-            <div class="form-group">
-              <label for="email-signup">Email:</label>
-              <input class="form-control" type="text" id="email-signup" />
-            </div>
-            <div class="form-group">
-              <label for="password-signup">Password:</label>
-              <input class="form-control" type="password" id="password-signup" />
-            </div>
-            <div class="form-group text-center">
-              <button class="btn btn-primary" type="submit">Register</button>
-            </div>
-          </form>
+      <div class="col-md-6">
+        <div class="card bg-light">
+          <div class="card-body">
+            <h2 class="card-title text-center">Register</h2>
+            <form class="form signup-form">
+              <div class="form-group">
+                <label for="name-signup">Name:</label>
+                <input class="form-control" type="text" id="name-signup" />
+              </div>
+              <div class="form-group">
+                <label for="email-signup">Email:</label>
+                <input class="form-control" type="text" id="email-signup" />
+              </div>
+              <div class="form-group">
+                <label for="password-signup">Password:</label>
+                <input class="form-control" type="password" id="password-signup" />
+              </div>
+              <div class="form-group text-center">
+                <button class="btn btn-primary" type="submit">Register</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
