--- a/views/addComment.handlebars
+++ b/views/addComment.handlebars
@@ -19,7 +19,7 @@
                     <label for="floatingTextarea2">Comments</label>
                 </div>
                 <div class="d-flex justify-content-center p-2">
-                    <button type="submit" class="btn btn-primary btn-md addCommentBtn">Add Comment</button>
+                    <button type="submit" class="btn btn-success btn-md addCommentBtn">Add Comment</button>
                 </div>
             </form>
         </div>
