--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <header class="rounded-3  text-light border border-success-subtle rounded-3 mb-4">
-        <nav class="py-3 border-bottom border-success border-3 bg-success-subtle text-success-emphasis bg-image" style="
+    <header class="rounded-3  text-light  rounded-3 mb-4">
+        <nav class="py-3 bg-success-subtle text-success-emphasis bg-image boarder border-bottom border-4" style="
     background-image: url('https://www.hovia.com/app/uploads/mint-green-geometric-wallpaper-mural-Room-1024x664.jpg');
     height: 10vh;
   ">
@@ -35,6 +35,9 @@
                 {{/if}}
             </ul>
         </nav>
+        <div class="py-3  text-success-emphasis">
+            <h2>The State Reviewer</h2>
+        </div>
     </header>
     {{{body}}}
     <footer class=" bg-success text-center text-white">
