changed copyright name

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,7 +46,7 @@
     height: 5vh;
   ">
             © 2019 Copyright:
-            <a class="text-white" href="https://github.com/linuscth">github.com/linuscth</a>
+            <a class="text-white" href="https://github.com/linuscth">The State Reviewer</a>
         </div>
         <!-- Copyright -->
     </footer>
